# minispark

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: sample.txt
examples/: showcase.py  wordcount.py
minispark/: __init__.py  context.py  core.py
tests/: test_core.py
