[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minispark"
version = "0.1.0"
description = "Single-node Spark-like RDD prototype for learning DAG execution concepts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cloudpickle",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
include = ["minispark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]